# ArcLibML

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/ArcML/: Activations.hpp  ArcKeywords.hpp  ArcML.hpp  Dense.hpp  Tensor.hpp
tests/: dense_test.cpp
